rendered/envs/alpha/vmks/ingressroute-vmalert-lan.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: vmalert-lan
spec:
  entryPoints:
    - lan-web
    - lan-websecure
  routes:
    - kind: Rule
      match: Host(`vmalert.lan.zebradil.dev`) || Host(`vmalert.junior.lan.zebradil.dev`)
      services:
        - name: vmalert-vmks
          port: http
